deployment/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-github-app
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: frontend
